fixed string wrap in console results

--- a/app/styles/console.less
+++ b/app/styles/console.less
@@ -135,7 +135,7 @@ tr > .cr-table-cell {
 }
 .cr-table-cell--max-width {
   max-width: 400px;
-  word-wrap: break-all !important;
+  word-wrap: break-word !important;
   display: block;
 }
 
